--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,11 @@
 body {
     background-color: green;
 }
+
+#pageTitle {
+    background-color: bisque;
+}
+
+#articles {
+    background-color: burlywood;
+}
