--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,11 +1,54 @@
 body {
-    background-color: green;
+  background-color: #444;
 }
 
 #pageTitle {
-    background-color: bisque;
+  background-image: url("../img/computer.jpg");
+  background-repeat: no-repeat;
+  color: #fff;
+  border: 8px double #fff;
 }
 
+/* 5, 149, 179 */
+/* 6, 162, 194 */
+
 #articles {
-    background-color: burlywood;
+  background-image: linear-gradient(
+      90deg,
+      rgba(2, 0, 36, 1) 0%,
+      rgba(204, 204, 204, 0.25) 35%,
+      rgba(5, 149, 179, 1) 100%
+    ),
+    url(../img/chemical.jpg);
+
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #999;
+  color: #fff;
+}
+
+.article-list {
+  list-style-type: none;
+}
+
+a:link,
+a:visited {
+  color: white;
+  padding: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.link:hover {
+  background-color: #333;
+  border-radius: 50%;
+  transition: 1s;
+}
+
+.text-warning:hover {
+  border-radius: 50%;
+  background-color: #d35400;
+  color: #fff;
+  transition: 0.5s;
 }
