--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,13 +13,13 @@
     <div class="container">
         <div class="row">
             <div id="articles" class="col-md-12 text-center p-3 mt-5">
-                <h2>Articles</h2>
+                <p class="display-4">ARTICLES</p>
 
                 <ul class="article-list">
                     {{#each results}}
                         <li>
                         <h4 class="text-warning lead p-3"><strong>{{title}}</strong></h4>
-                        <p class="link"><a href="{{link}}" target="_blank">{{link}}</a></p>
+                        <p class="storylink"><a href="{{link}}" target="_blank">{{link}}</a></p>
                         <p>{{summary}}</p>
                         </li>
                         <br>
