save to db and query via articles route

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,6 +16,7 @@
                 <p class="display-4">ARTICLES</p>
 
                 <ul class="article-list">
+                    <!-- loop through results array passed in via data object -->
                     {{#each results}}
                         <li>
                         <h4 class="text-warning lead p-3"><strong>{{title}}</strong></h4>
