enforcing unique on articles in db schema

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,7 +20,7 @@
                     {{#each results}}
                         <li>
                         <h4 class="text-warning lead p-3"><strong>{{title}}</strong></h4>
-                        <p class="storylink"><a href="{{link}}" target="_blank">{{link}}</a></p>
+                        <p><a href="{{link}}" target="_blank"><span class="storylink">Article Link</span></a></p>
                         <p>{{summary}}</p>
                         </li>
                         <br>
