--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,9 @@
 	<title>MVC News Scraper</title>
 </head>
 <body>
+  <div id="main">
 	{{{ body }}}
+  </div>
 
 	<script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
