--- a/public/css/main.css
+++ b/public/css/main.css
@@ -59,3 +59,9 @@ a:visited {
   transition: 0.5s;
   cursor: pointer;
 }
+
+.del {
+  background-color: red;
+  color: #fff;
+  border: 2px solid red;
+}
