updated scrape logic

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
             <div id="pageTitle" class="col-md-12 text-right p-5 mt-5">
                 <h1 class="mb-3"><strong>SCIENCE NEWS</strong></h1>
                 <h2>The Top Five Science Stories of the Day</h2>
-                <p><button id="scrapeButton" type="button" class="mt-3 btn btn-info">Scrape</button>
+                <p><button id="scrapeButton" type="button" class="mt-3 btn btn-info">Refresh Scrape</button>
             </div>
         </div>
     </div>
